external-crates/move/crates/move-compiler/tests/move_check/naming/assert_one_arg.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/naming/assert_one_arg.move:3:9
  │
3 │         assert!(false);
  │         ^^^^^^ Clever `assert!`, `abort`, and `#[error]` are not supported by current edition 'legacy'; the '2024' edition supports this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/naming/assert_one_arg.move:4:9
  │
4 │         assert!(0 != 1);
  │         ^^^^^^ Clever `assert!`, `abort`, and `#[error]` are not supported by current edition 'legacy'; the '2024' edition supports this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/naming/assert_one_arg.move:5:9
  │
5 │         assert!(x != y);
  │         ^^^^^^ Clever `assert!`, `abort`, and `#[error]` are not supported by current edition 'legacy'; the '2024' edition supports this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E03009]: unbound variable
  ┌─ tests/move_check/naming/assert_one_arg.move:5:22
  │
5 │         assert!(x != y);
  │                      ^ Unbound variable 'y'
